# tap-customerio

./: pyproject.toml
tap_customerio/: client.py
