[tool.poetry]
name = "tap-customerio"
version = "0.0.1"
description = "`tap-customerio` is a Singer tap for CustomerIo, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["FirstName LastName <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "CustomerIo",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13,<4"
singer-sdk = { version="~=0.48.0" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"
schemabuilder = "^0.3.0"
genson = "^1.2.2"
setuptools = ">=68.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.48.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_customerio"]
target-version = "py313"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_customerio"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-customerio = 'tap_customerio.tap:TapCustomerIo.cli'
